--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,60 @@ The ChangeLog for data.table is the SVN commit log itself :
 
 This NEWS file summarises the main changes.
 
+        *********************************************
+        **                                         **
+        **   CHANGES IN DATA.TABLE VERSION 1.6     **
+        **                                         **
+        *********************************************
+
+NEW FEATURES
+
+   o    data.table now plays nicely with S4 classes. Slots can be
+        defined to be S4 objects, S4 classes can inherit from data.table,
+        and S4 function dispatch works on data.table objects. See the
+        tests in inst/tests/test-S4.R, and from the R prompt:
+        ?"data.table-class"
+
+   o    merge.data.table now works more like merge.data.frame:
+        (i) suffixes are consistent with merge.data.frame; existing users
+        may set options(datatable.pre.suffixes=TRUE) for backwards
+        compatibility.
+        (ii) support for 'by' argument added (FR #1315).
+        However, X[Y] syntax is preferred; some users never use merge.
+  
+
+BUG FIXES
+
+   o    by=key(DT) now works when the number of rows is not
+        divisible by the number of groups (#1298, an odd bug).
+        Thanks to Steve Lianoglou for reporting.
+        
+   o    Combining i and by where i is logical or integer subset now
+        works, fixing bug #1294. Thanks to Johann Hibschman for
+        contributing a new test.
+   
+   o    Variable scope inside [[...]] now works without a workaround
+        required. This can be useful for looking up which function 
+        to call based on the data e.g. DT[,fns[[fn]](colA),by=ID].
+        Thanks to Damian Betebenner for reporting.
+        
+   o    Column names in self joins such as DT[DT] are no longer
+        duplicated, fixing bug #1340. Thanks to Andreas Borg for
+        reporting.
+        
+
+USER-VISIBLE CHANGES
+
+   o    Additions and updates to FAQ vignette. Thanks to Dennis
+        Murphy for his thorough proof reading.
+        
+   o    Welcome to Steve Lianoglou who joins the project
+        contributing S4-ization, testing using testthat, and more.
+        
+   o    IDateTime is now linked from ?data.table. data.table users
+        unaware of IDateTime, please do take a look. Tom added
+        IDateTime in v1.5 (see below).
+
 
         *********************************************
         **                                         **
